src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail12.jova
class Test{
public int main() {

    return 0;
    }
}

class Main {


}